--- a/Graphs - Exercises.ipynb
+++ b/Graphs - Exercises.ipynb
@@ -180,9 +180,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Exercise 5. **Check if Graph is Bipartite**\n",
-    "    - Write a program to check if the given graph is bipartite.\n"
+    "    - Write a program to check if the given graph is bipartite.\n",
+    "    \n",
+    "*(Please note that, a bipartite graph is a graph where the vertices can be divided into two disjoint sets such that all edges connect a vertex in one set to a vertex in another set*).\n"
    ]
   },
   {
